--- a/JSExamples/Test.htm
+++ b/JSExamples/Test.htm
@@ -4,8 +4,36 @@
     <title></title>
 </head>
 <body>
-<script type="text/javascript">
-document.get
-</script>
+    <script type="text/javascript">
+
+    function test(){
+        var p = new Person();
+        
+    }
+
+    function Person() {
+        var fname, lname, id;
+        return 
+        {
+        getFirstName: function(){
+            return firstName;
+        },
+        setFirstName: function(firstName){
+            fname = firstName;
+        },
+        getLastName: function(){
+            return lastName;
+        },
+        setLastName: function(lastName){
+            lname = lastName;
+        },
+        getId: function(){
+            return id;
+        },
+        setId: function(id){
+            id = id;
+        }
+    }
+    </script>
 </body>
 </html>
